# RIBRAS

./: CMakeLists.txt  Example.cc  README.md  USP_RIBRAS.cc  precommit.txt  vis.mac
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  MagneticField.hh  MagneticFieldMessenger.hh  MonitorHit.hh  Particles.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SDMonitor.hh  SDSiliconMonitor.hh  SetupConstruction.hh  SiliconMonitorHit.hh  StepMax.hh  StepMaxMessenger.hh
macros/: MAINmacro.mac  vis.mac  visQt.mac
src/: ActionInitialization.cc  BeamTestPrimaryGeneratorAction.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  MagneticField.cc  MagneticFieldMessenger.cc  MonitorHit.cc  Particles.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  RootSaver.cc  Run.cc  RunAction.cc  SDMonitor.cc  SDSiliconMonitor.cc  SetupConstruction.cc  SiliconMonitorHit.cc  StepMax.cc  StepMaxMessenger.cc
